applications/volumenes/mariadb-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mariadb-deployment
  labels:
    app: wordpress
    type: database
spec:
  strategy:
    blueGreen:
      activeService: mariadb-service-active
      previewService: mariadb-service-preview
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      type: database
  template:
    metadata:
      labels:
        app: wordpress
        type: database
    spec:
      containers:
        - name: contenedor-mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mariadb-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
