applications/volumenes/wordpress-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 1
  strategy:
    blueGreen:
      activeService: wordpress-service-active
      previewService: wordpress-service-preview
  selector:
    matchLabels:
      app: wordpress
      type: frontend
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
    spec:
      containers:
        - name: contenedor-wordpress
          image: wordpress
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          volumeMounts:
            - name: wordpress-vol
              mountPath: /var/www/html
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress-pvc
