applications/volumenes/mariadb-service-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-preview
spec:
  type: ClusterIP
  ports:
    - name: mariadb-service-preview-port
      port: 3306
      targetPort: db-port
  selector:
    app: wordpress
    type: database
